Overhauled user page. Squashed many a bug. Added .env for sensitive credentials. Added to gitignore to host the site live on a domain.
Also heavily reworked user page and function.

--- a/src/assets/css/users.css
+++ b/src/assets/css/users.css
@@ -167,3 +167,189 @@
     opacity: 0.2;
   }
 }
+/*-- -------------------------- -->
+<---          Contact           -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #contact-2061 {
+    padding: var(--sectionPadding);
+    overflow: hidden;
+    position: relative;
+  }
+  #contact-2061 .cs-container {
+    width: 100%;
+    max-width: 59rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem;
+  }
+  #contact-2061 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #contact-2061 .cs-text {
+    max-width: none;
+  }
+  #contact-2061 .cs-form {
+    width: 100%;
+    /* 464px - 846px */
+    max-width: clamp(29rem, 59vw, 52.875rem);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0.75rem;
+  }
+  #contact-2061 .cs-label {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.5em;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    grid-column: span 12;
+    gap: 0.5rem;
+  }
+  #contact-2061 .cs-input {
+    font-family: inherit;
+    font-size: 1rem;
+    width: 100%;
+    height: 3.5rem;
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    padding-left: 1.5rem;
+    background-color: #f7f7f7;
+    color: var(--bodyTextColor);
+    border: none;
+    border-radius: 0.5rem;
+  }
+  #contact-2061 .cs-select,
+  #contact-2061 .cs-date {
+    /* as the select arrow/date calendar icon are not affected by padding, we can use a transparent border on the select element to pad the arrow as much as we need */
+    border-right: 1.5rem solid rgba(0, 0, 0, 0);
+  }
+  #contact-2061 .cs-textarea {
+    height: 7.5rem;
+    margin-bottom: 2rem;
+    padding-top: 1rem;
+  }
+  #contact-2061 .cs-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    grid-column: span 12;
+  }
+  #contact-2061 .cs-button-solid {
+    font-size: 1rem;
+    font-weight: 700;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-align: center;
+    text-decoration: none;
+    min-width: 9.375rem;
+    margin: 0;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+    padding: 0 2rem;
+    background-color: var(--primary);
+    color: #fff;
+    border-radius: 0.5rem;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+  }
+  #contact-2061 .cs-button-solid:before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    background: #000;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #contact-2061 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #contact-2061 .cs-submit {
+    border: none;
+  }
+  #contact-2061 .cs-submit:hover {
+    cursor: pointer;
+  }
+  #contact-2061 .cs-graphic {
+    display: none;
+    position: absolute;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #contact-2061 .cs-split {
+    grid-column: span 6;
+  }
+  #contact-2061 .cs-graphic {
+    display: block;
+  }
+  #contact-2061 .cs-graphic-left {
+    width: 33rem;
+    height: auto;
+    bottom: -6.6875rem;
+    left: -24.5625rem;
+  }
+  #contact-2061 .cs-graphic-right {
+    width: 30.1875rem;
+    height: auto;
+    top: -2.125rem;
+    right: -19.75rem;
+  }
+}
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #contact-2061 .cs-graphic-left {
+    right: -20.1875rem;
+    bottom: -3.25rem;
+  }
+  #contact-2061 .cs-graphic-right {
+    right: -18.125rem;
+  }
+}
+/* Large Desktop - 1920px */
+@media only screen and (min-width: 120rem) {
+  #contact-2061 .cs-graphic-left {
+    margin-right: 47.5rem;
+    right: 50%;
+    bottom: 0;
+    left: initial;
+  }
+  #contact-2061 .cs-graphic-right {
+    margin-left: 48.4375rem;
+    right: initial;
+    left: 50%;
+  }
+}
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+  body.dark-mode #contact-2061 .cs-title,
+  body.dark-mode #contact-2061 .cs-text,
+  body.dark-mode #contact-2061 .cs-label,
+  body.dark-mode #contact-2061 .cs-input {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #contact-2061 .cs-input {
+    background-color: var(--medium);
+    opacity: 0.8;
+  }
+  body.dark-mode #contact-2061 .cs-input::placeholder {
+    color: var(--bodyTextColorWhite);
+  }
+}
